@@ -1,3 +1,4 @@
+2669 [VobSubber]            added title selector for DVD sources incl. multi-angle support
 2668 [FileIndexer]          added title selector for DVD sources incl. multi-angle support
 2667 [TitleSelector]        added support for multi-angle DVD sources
      [OneClick]             added support for multi-angle DVD sources
